Closed Bug 503497 Opened 16 years ago Closed 15 years ago

Profiler broken when MMGC_USE_SYSTEM_MALLOC is on

Categories

(Tamarin Graveyard :: Garbage Collection (mmGC), defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: treilly, Assigned: treilly)

References

Details

Attachments

(1 file, 1 obsolete file)

In this case we call profiler->RecordAllocation directly which isn't thread safe. Perhaps the profiler should have its own lock and GCHeap::AllocHook/FinalizeHook don't need one.
Attached patch add locks to TrackSystem* (obsolete) — Splinter Review
Assignee: nobody → treilly
Status: NEW → ASSIGNED
Attachment #396209 - Flags: superreview?(lhansen)
Attached file Working patch
Attachment #396209 - Attachment is obsolete: true
Attachment #396424 - Flags: superreview?(lhansen)
Attachment #396209 - Flags: superreview?(lhansen)
Attachment #396424 - Attachment mime type: application/octet-stream → text/plain
Blocks: 487199
Attachment #396424 - Flags: superreview?(lhansen) → superreview+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: