Fix bug 503497, need to protect access to profiler with lock when MMGC_USE_SYSTEM_MALLOC in on (r=lhansen)